--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This repository is the part of nodejs-assignments https://github.com/AlreadyBored/nodejs-assignments",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "args": "node src/cli/args.js --flag1 1 --flag2 2"
   },
   "repository": {
     "type": "git",
